# coffeetech_transactions_service

./: README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
adapters/: farm_client.py  user_client.py
domain/: __init__.py  schemas.py
domain/services/: __init__.py
endpoints/: reports.py  transactions.py
models/: models.py
tests/: __init__.py  conftest.py  mock_database.py
tests/adapters/: test_farm_client.py  test_user_client.py
tests/domain/: __init__.py
tests/domain/services/: __init__.py  test_list_transaction_categories_service.py  test_list_transaction_types_service.py
tests/endpoints/: __init__.py  test_reports.py  test_transactions.py
tests/use_cases/: __init__.py  test_create_transaction_use_case.py  test_delete_transaction_use_case.py  test_edit_transaction_use_case.py  test_generate_financial_report_use_case.py  test_list_transaction_categories_use_case.py  test_list_transaction_types_use_case.py  test_list_transactions_use_case.py
tests/utils/: __init__.py  test_response.py  test_state.py
use_cases/: create_transaction_use_case.py  delete_transaction_use_case.py  edit_transaction_use_case.py  generate_financial_report_use_case.py  list_transaction_categories_use_case.py  list_transaction_types_use_case.py  list_transactions_use_case.py
utils/: logger.py  state.py
