[project]
name = "transactions-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "firebase-admin>=6.8.0",
    "httpx>=0.28.1",
    "orjson>=3.10.18",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=use_cases",
    "--cov=adapters", 
    "--cov=domain",
    "--cov=endpoints",
    "--cov=models",
    "--cov=utils",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
